--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
+        "jms/serializer-bundle": "^1.1",
         "picamator/neo-ws-client": "dev-dev"
     },
     "require-dev": {
