Added command to get NEO's data for last 3 days

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,3 +17,14 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    # neo-ws-client
+    # @see /vendor/picamator/neo-ws-client/config/parameters.yml.dist
+    neo_ws_client.http:
+      endPoint: 'https://api.nasa.gov/neo/rest/v1/'
+      apiKey: 'DEMO_KEY'
+      # proxy is optional for debug
+      # proxy: '192.168.0.104:8888'
+      optionList:
+        # keep SSL verification true on production, @see http://docs.guzzlephp.org/en/latest/request-options.html#verify
+        verify: true
