--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require": {
         "php": ">=5.3.9",
+        "ext-bcmath": "*",
         "symfony/symfony": "2.8.*",
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
@@ -25,6 +26,8 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
+        "ocramius/proxy-manager": "~1.0",
+        "symfony/proxy-manager-bridge": "2.8.*",
         "jms/serializer-bundle": "^1.1",
         "picamator/neo-ws-client": "dev-dev"
     },
