--- a/src/Neo/NasaBundle/Resources/config/services.yml
+++ b/src/Neo/NasaBundle/Resources/config/services.yml
@@ -56,3 +56,11 @@ services:
   neo_nasa.service_sync:
     class: 'Neo\NasaBundle\Service\SyncService'
     arguments: ["@=service('doctrine.odm.mongodb.document_manager')", "@neo_nasa.model_nasa_crawler", "@neo_nasa.model_manager_neo", "@neo_nasa.model_manager_sync_log"]
+
+  neo_nasa.service_hazardous:
+    class: 'Neo\NasaBundle\Service\HazardousService'
+    arguments: ["@=service('doctrine.odm.mongodb.document_manager').getRepository('NeoNasaBundle:Neo')", "@neo_nasa.doctrine_array_collection"]
+
+  neo_nasa.service_fastest:
+    class: 'Neo\NasaBundle\Service\FastestService'
+    arguments: ["@=service('doctrine.odm.mongodb.document_manager').getRepository('NeoNasaBundle:Neo')"]
