--- a/src/Neo/NasaBundle/Resources/config/services.yml
+++ b/src/Neo/NasaBundle/Resources/config/services.yml
@@ -6,6 +6,13 @@ services:
 #        class: Neo\NasaBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
 
+  # Event
+  # ========
+  neo_nasa.json_listener:
+    class: 'Neo\NasaBundle\EventListener\JsonListener'
+    tags:
+      - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
+
   # Doctrine
   # ========
   neo_nasa.doctrine_array_collection:
